# mcp-examples

./: README.md
agent/: README.md
policy/: .gitignore  Makefile  README.md  compose.yaml  mcp.json  pyproject.toml
policy/.mcphost/: hooks.yml
policy/hooks/: opa.py
policy/policies/: mcp.rego  test_mcp.rego
server/: IAMConfig.md  README.md  client.py  pyproject.toml  server.py
